scrollbar not fixed for chrome

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,18 +11,19 @@
 }
 
 ::-webkit-scrollbar {
-  width: 4px !important;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #3a3a3a;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #929191;
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #e0dbdb;
 }
